k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nucleus-core
  labels:
    app: nucleus-core
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: nucleus-core
